pie chart added

--- a/expensetrackhtml.html
+++ b/expensetrackhtml.html
@@ -65,6 +65,9 @@
     <div id="summary-balance">$0.00</div>
   </div>
 </div>
+<h2>Expense Distribution by Category</h2>
+<canvas id="expenseChart" width="300" height="300" style="max-width: 100%;"></canvas>
+
 
 
   <h2>Transactions</h2>
